Menu fijo en pantalla con fixed, relative y capas con Z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ h1,h2{
 }
 h1{
     text-align: center;
-    font-size: 120%;
+    font-size: 180%;
     font-weight: bold;
 }
 p{
@@ -223,6 +223,7 @@ button{
 .texto{
     height:25px;
 }
+
 
 
 
